# echoNBZD

./: CmdLineParser.cxx
arucoProj/: arucoProj.pro  camera_calibration.cpp  client.cxx  in_VID5.xml  makerdetector.cxx  mymarker.cpp
build-arucoProj-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  arucoProj
nextFu/build-fireFu-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  fireFu
nextFu/fireFu/: arduinoHeaders.h  arduinocomm.cpp  commCtrl.cxx  commCtrl.h  fireFu.pro  main.cpp  stdHeaders.h  sysHeaders.h  uav_demo.cpp  utilities.cpp  utilities.h
src/AIproject/src/: bn.cpp
src/DreamTaleEye/launch/: DreamTaleEye1.0.launch  DreamTaleEye1.1.launch  DreamTaleEye1.2.launch  DreamTaleEye1.3.launch  DreamTaleEye1.4.launch
src/PID_lib/: pid.cpp  pid.h  pid_controller_demo.cpp
src/commOp/: CMakeLists.txt  package.xml
src/commOp/src/: readComm.cpp  writeComm.cpp
src/ctrl_servo/: CtrlServo.cpp  ServoCtrlSimple.cpp  ServoCtrlSimple1.1.cpp  Servo_beta (copy).cpp  Servo_beta.cpp
src/ctrl_servo/Servo_beta/: Servo_beta.ino
src/dji_sdk/launch/: sdk_demo.launch
src/img_proc/: CMakeLists.txt  package.xml
src/img_proc/src/: OpenCV2ROS.cpp
src/include/: commHeader.h  msgsHeader.h  opencvHeader.h  socketHeader.h  stdHeader.h  transHeader.h
src/listener_test/: CMakeLists.txt  package.xml
src/listener_test/src/: listener-Int.cpp  listener.cpp
src/moveDetec/: CMakeLists.txt  package.xml
src/moveDetec/src/: camshift_Demo.cpp  deteColor.cpp  detecCircle (copy).cpp  detecCircle.cpp  detecMoving.cpp  faceDetec01.cpp
src/myFilter/: CMakeLists.txt  package.xml
src/myFilter/src/: filiterSimple.cpp  filiterSimple01.cpp  filiterSimpleEnter.cpp
src/mySocket/: CMakeLists.txt  package.xml
src/mySocket/src/: client.cpp  server.cpp
src/operateCom/: makefile  readComm  writeComm
src/operateCom/src/: readComm.c  writeComm.c
src/optArduino/Servo/: Servo.ino
src/optCvtCmd/: CMakeLists.txt  package.xml
src/optCvtCmd/src/: cvtCmd.cpp
src/optObjUAV/: CMakeLists.txt  package.xml  try.xml
src/optObjUAV/src/: aruco_test_on_ros.cpp  aruco_test_on_ros2.cpp  aruco_tracker.cpp  deteColor.cpp  kalman_imu.cpp  optArucoTrack.cpp  optColorTrack.cpp  stable.cxx  uav_math.h
src/optObjUAV/src/EKF_lib/: EKF.hpp
src/optObjUAV/src/aruco_lib/: markerdetector.cpp
src/optObjUAV/src/math_lib/: uav_math.h
src/optSerialComm/: CMakeLists.txt  package.xml
src/optSerialComm/src/: writeComm.cpp
src/posiCvt/: CMakeLists.txt  package.xml
src/posiCvt/src/: pixel2angle-1.1.cpp  pixel2angle.cpp  pixel2angle4color.cpp
src/qtArCV/: opencvHeaders.hpp
src/qtArCV/build-forUAV-Desktop-Debug/: Makefile  forUAV
src/qtArCV/forUAV/: arucoHeaders.h  duck_vision_posi.cpp  forUAV.pro  main.cpp  stableVideo.cxx
src/qtArCV/forUAV/aruco_lib/: cameraparameters.cpp  marker.cpp
src/read_cam/: CMakeLists.txt  asicamera.xml  package.xml  readme.txt
src/read_cam/launch/: asi.launch  web_video.launch
src/read_cam/src/: webCameraRead.cpp
src/stableVideo/: CMakeLists.txt  package.xml
src/stableVideo/src/: stable.cxx
src/tf_robot/: CMakeLists.txt  package.xml
src/vision_uav/: CMakeLists.txt  ca150.yml  ca65.yml  camera.xml  package.xml  targetsearch.xml
src/vision_uav/src/: aruco_test_on_ros.cpp  aruco_test_on_ros2.cpp  circle_reader.cpp  color_tracking_node.cpp  color_tracking_onxu_test_node.cpp  duck_vision_posi.cpp  ekf_test.cpp  image_to_video.cpp  image_to_video_asi.cpp  kalman_pub.cpp  kalman_test.cpp  kalman_test2.cpp  test_color.cpp  test_haar.cpp  test_histogram.cpp  test_hough.cpp  test_receive.cpp  vision_uav.cpp
src/vision_uav/src/EKF_lib/: EKF.cpp
src/vision_uav/src/KF_lib/: KF.cpp  KF.hpp
src/vision_uav/src/aruco_lib/: cvdrawingutils.cpp
test/: .test.ccxx.swp  CMakeCache.txt  Makefile  cmake_install.cmake  test  test.cxx
test/rock/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main.cpp  rock
videoStab/: about.cpp  about.h  about.ui  cv4stab.h  main.cpp  myThread.h  source.qrc  videoStab.pro  videoStab.pro.user.6cf1340  welcom.cpp  welcom.h  welcom.ui  welcomes.ui  widget (copy).cpp  widget.cpp  widget.h  widget.ui
